--- a/Contact Me.html
+++ b/Contact Me.html
@@ -8,17 +8,17 @@
     <h3>Contacts</h3>
     <ul>
       <li>
-        Email: Pelumiawesu@gmail.com
+        Email: 
       </li>
       <li>
         Linkedin:<a href="https://www.linkedin.com/in/pelumi-a-0922168b/">Awesu Pelumi</a>
       </li>
       <li>
-        Phone Number: 0892646911
+        Phone Number: 12345678
       </li>
     </ul>
     <hr>
-    <form  action="mailto:pelumiawesu@gmail.com" method="post"enctype="text/plain">
+    <form  action="" method="post"enctype="text/plain">
       <label>Your Name</label>
       <input type="text" name="YourName" value=""> <br>
       <label>Your Email</label>
@@ -26,7 +26,7 @@
       <label>Your Message</label><br>
       <textarea name="Your Message" rows="10" cols="30"></textarea><br>
       <input type="checkbox" name="" value="">
-    <a href="mailto:pelumiawesu@gmail.com"> <input type="Submit"/> </a>
+    <a href=""> <input type="Submit"/> </a>
 
 
     </form>
